materia/tests/errors/overfilled-level.typ
// expected: materia: occupation for level "bad" must be an integer from 0 to 2
#import "/lib.typ": energy-level
#energy-level("bad", 0, occupation: 3)
